test/files/neg/t5390c.check
t5390c.scala:7: error: forward reference extends over definition of value b
    val b = new a.B("")
                ^
one error found
